# cpp-starter

./: CMakeLists.txt  configure.bat  configure.sh
src/: main.cpp
